@@ -4,6 +4,7 @@
 import logging
 from Products.CMFCore.utils import getToolByName
 import transaction
+from zope.annotation import IAnnotations
 
 logger = logging.getLogger(__name__)
 
@@ -22,6 +23,13 @@ def cleanup_convert_figure_jobs(context):
             doc = brain.getObject()
             if getattr(doc, '_convertjob', None):
                 del doc._convertjob
+            try:
+                anno = IAnnotations(doc)
+            except TypeError:
+                continue
+            convert_job = anno.get('convert_figure_job')
+            if convert_job and not isinstance(convert_job, dict):
+                del anno['convert_figure_job']
             else:
                 continue
             logger.info('Removing async for %s', brain.getURL())
@@ -32,6 +40,7 @@ def cleanup_convert_figure_jobs(context):
                 transaction.commit()
         except Exception, err:
             logger.warn('Couldn\'t remove async for %s', brain.getURL())
+            # ctool.uncatalog_object(brain.getPath())
             logger.exception(err)
             continue
 
